# ragmap

./: LICENSE  README.md  pyproject.toml
src/ragmap/: __init__.py  cli.py  config.py  models.py  output.py  session.py
src/ragmap/phases/: __init__.py  detect.py  enumerate.py  threshold.py
src/ragmap/phases/chunks/: __init__.py  ids.py  metrics.py  overlap.py  quality.py  size.py  tokenizer.py
src/ragmap/presets/: __init__.py  base.py  generic.py  haystack.py  langchain.py  llamaindex.py
src/ragmap/rules/: default.yml
src/ragmap/stealth/: keywords.py  queries.py  rotator.py
